changed BackButtns, fixed timing on mobilepay + wireless, top for OnePayment

--- a/form-react/src/components/CheckOrder.modules.css
+++ b/form-react/src/components/CheckOrder.modules.css
@@ -144,9 +144,9 @@
 }
 
 .checkOrderBackButton {
-  width: 50px;
-  height: 50px;
-  background-color: var(--bright-purple-bg);
+  /* width: 50px;
+  height: 50px; */
+  /* background-color: var(--bright-purple-bg); */
   display: flex;
   justify-content: center;
   align-items: center;
